--- a/index.html
+++ b/index.html
@@ -16,7 +16,20 @@
 
 <body>
     <div class="main-container">
-        <header></header>
+        <header>
+
+            <nav>
+                <div class="gauche">
+                     <img src="images\logo\Booki.png" alt="logo booki"></a>
+                </div>
+                <div class="droite">
+                     <a href="images\hebergements">Hébergements</a>
+                     <a href="images\activites">Activités</a>
+                </div> 
+             </nav>
+
+
+        </header>
         <main>
             <div class="hebergements-and-populaires">
                 <section class="hebergements">
