--- a/index.html
+++ b/index.html
@@ -10,23 +10,24 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
-<body>
+
     <body>
         <div class="main-container">
-            <header>
+            
                 <nav>
                     <div class="gauche">
-                         <img src="images\logo\Booki.png" alt="logo booki"></a>
+                         <img src="images/logo/Booki.png" alt="logo booki">
                     </div>
                     <div class="droite">
-                         <a href="images\hebergements">Hébergements</a>
-                         <a href="images\activites">Activités</a>
+                         <a href="images/hebergements">Hébergements</a>
+                         <a href="images/activites">Activités</a>
                     </div> 
                  </nav>
+                 <header>
                 <article class="titre">
                     <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
                     <p>En plein centre-ville ou en pleine nature</p>
@@ -38,17 +39,16 @@
                         <i class="fa-sharp fa-solid fa-location-dot"></i>
                         <input type=search>
                         <button>Rechercher</button>
+                        <i class="fa-solid fa-magnifying-glass"></i>
+                        </div>
                     </form>
-                    </div>
                     <br>
-                    <br>
-                    <article>
                         <div class="barfilter">
                         <div class="icones">
-                        <ul>
-                            <li class="filtres">
+                            <div class="filtres"> 
                                 <h3>Filtres</h3>
-                            </li>
+                            </div>
+                        <ul>
                             <li>
                                 <i class="fa-solid fa-money-bill-wave"></i>
                                 <h3>Economique</h3>
@@ -68,8 +68,6 @@
                         </ul>
                         </div>
                         </div>          
-                    </article>
-                    <br>
                     <br>
                          <div class="info">
                                 <i class="fa-solid fa-info"></i>
@@ -81,7 +79,6 @@
             <main>
             <div class="hebergements-and-populaires">
                 <section class="hebergements">
-
                 </section>
                 <section class="populaires">
                     <div class="populaires-title">
