--- a/index.html
+++ b/index.html
@@ -16,35 +16,32 @@
     <body>
         <div class="main-container">
                 <nav>
-                    <div class="gauche">
+                    <div class="left">
                          <img src="images/logo/Booki.png" alt="logo booki">
                     </div>
-                    <div class="droite">
+                    <div class="right">
                          <a href="images/hebergements">Hébergements</a>
                          <a href="images/activites">Activités</a>
                     </div> 
                  </nav>
-                 <header>
-                <article class="titre">
-                    <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
-                    <p>En plein centre-ville ou en pleine nature</p>
-                    </article>
+            <header>
+                 <article class="title">
+                        <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
+                        <p>En plein centre-ville ou en pleine nature</p>
+                 </article>
                     <br>
                     <br>
-                    <form>
-                        <div class="container">
+                    <div class="container">
                         <i class="fa-sharp fa-solid fa-location-dot"></i>
                         <input type=search>
                         <button>Rechercher</button>
                         <i class="fa-solid fa-magnifying-glass"></i>
-                        </div>
-                    </form>
+                    </div>
                     <br>
-                        <div class="barfilter">
-                        <div class="icones">
-                            <div class="filtres"> 
+                    <div class="icones">
+                        <div class="filter"> 
                                 <h3>Filtres</h3>
-                            </div>
+                        </div>
                         <ul>
                             <li>
                                 <i class="fa-solid fa-money-bill-wave"></i>
@@ -63,13 +60,12 @@
                                 <h3>Nos pépites</h3>
                             </li>
                         </ul>
-                        </div>
-                        </div>          
+                    </div>          
                     <br>
-                         <div class="info">
-                                <i class="fa-solid fa-info"></i>
-                                <p>Plus de 500 logements sont disponibles dans cette ville </p>
-                         </div>
+                    <div class="info">
+                         <i class="fa-solid fa-info"></i>
+                         <p>Plus de 500 logements sont disponibles dans cette ville </p>
+                    </div>
                     <br>   
                     <br>  
             </header>
