--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
     <body>
-        <div class="main-container">
+        <div class="main-container-nav">
                 <nav>
                     <div class="left">
                          <img src="images/logo/Booki.png" alt="logo booki">
@@ -24,7 +24,7 @@
                          <a href="images/activites">Activités</a>
                     </div> 
                  </nav>
-            <header>
+                 <div class="main-container">
                  <article class="title">
                         <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
                         <p>En plein centre-ville ou en pleine nature</p>
