--- a/index.html
+++ b/index.html
@@ -20,24 +20,22 @@
                          <img src="images/logo/Booki.png" alt="logo booki">
                     </div>
                     <div class="right">
-                         <a href="images/hebergements">Hébergements</a>
+                         <a href="#hebergements">Hébergements</a>
                          <a href="images/activites">Activités</a>
                     </div> 
                  </nav>
+                 <header>
                  <div class="main-container">
                  <article class="title">
                         <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
                         <p>En plein centre-ville ou en pleine nature</p>
                  </article>
-                    <br>
-                    <br>
                     <div class="container">
                         <i class="fa-sharp fa-solid fa-location-dot"></i>
                         <input type=search>
                         <button>Rechercher</button>
                         <i class="fa-solid fa-magnifying-glass"></i>
                     </div>
-                    <br>
                     <div class="icones">
                         <div class="filter"> 
                                 <h3>Filtres</h3>
@@ -61,7 +59,6 @@
                             </li>
                         </ul>
                     </div>          
-                    <br>
                     <div class="info">
                          <i class="fa-solid fa-info"></i>
                          <p>Plus de 500 logements sont disponibles dans cette ville </p>
@@ -71,7 +68,7 @@
             </header>
             <main>
             <div class="hebergements-and-populaires">
-                <section class="hebergements">
+                <section class="hebergements" id="hebergements">
                 </section>
                 <section class="populaires">
                     <div class="populaires-title">
