--- a/index.html
+++ b/index.html
@@ -26,18 +26,20 @@
                          <a href="images/activites">Activités</a>
                     </div> 
                  </nav>
-                 <header>
-                 <div class="main-container">
+            <header>
+                <div class="main-container">
                  <article class="title">
                         <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
                         <p>En plein centre-ville ou en pleine nature</p>
                  </article>
+                 <form class="search_form" method="GET" action="#">
                     <div class="container">
                         <i class="fa-sharp fa-solid fa-location-dot"></i>
                         <input type=search>
                         <button>Rechercher</button>
                         <i class="fa-solid fa-magnifying-glass"></i>
                     </div>
+                 </form>
                     <div class="icones">
                         <div class="filter"> 
                                 <h3>Filtres</h3>
@@ -65,6 +67,7 @@
                          <i class="fa-solid fa-info"></i>
                          <p>Plus de 500 logements sont disponibles dans cette ville </p>
                     </div>
+                </div>    
             </header>
             <main>
             <div class="hebergements-and-populaires">
