--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                          <img src="images/logo/Booki.png" alt="logo booki">
                     </div>
                     <div class="right">
-                         <a href="#hebergements">Hébergements</a>
+                         <a href="#hebergements" class="current">Hébergements</a>
                          <a href="images/activites">Activités</a>
                     </div> 
                  </nav>
