update and add section main

--- a/index.html
+++ b/index.html
@@ -68,132 +68,130 @@
                     </div>
                 </div>    
             </header>
-            <main>
-            <div class="hebergements-and-populaires">
-                <section class="hebergements" id="hebergements">
-                    <div class="populaires-title">
-                        <h2 class="section-title">Hébergements à Marseille</h2>
+        <main>
+        <div class="hebergements-and-populaires">
+            <section class="hebergements" id="hebergements">
+                <div class="populaires-title">
+                    <h2 class="section-title">Hébergements à Marseille</h2>
+                </div>   
+                <div class="form-container">
+                    <div class="form-1">
+                        <div class="hebergements-cards">
+                            <article class="card">
+                                <img src="images\hebergements\fred-kleber.jpg" alt="Image de la chambre d'hôtel montrant un lit">
+                                <div class="card-content">
+                                    <div class="card-txt">
+                                        <h3 class="card-title">Hôtel du port</h3>
+                                        <p class="card-subtitle">Nuit à partir de 52<span class="euro">€</span></p>
+                                    </div>
+                                    <div class="card-rating">
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"style="color: #F2F2F2;"></i>
+                                        <span class="sr-only">Note de 4 sur 5</span>
+                                    </div>
+                                </div>
+                            </article>
+                            <article class="card">
+                                <img src="images\hebergements\febrian-zakaria.jpg" alt="Image de la chambre d'hôtel montrant un lit">
+                                <div class="card-content">
+                                    <div class="card-txt">
+                                        <h3 class="card-title">Hôtel Chez Amina</h3>
+                                        <p class="card-subtitle">Nuit à partir de 96<span class="euro">€</span></p>
+                                    </div>
+                                    <div class="card-rating">
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"style="color: #F2F2F2;"></i>
+                                        <span class="sr-only">Note de 4 sur 5</span>
+                                    </div>
+                                </div>
+                            </article>
+                            <article class="card">
+                                <img src="images\hebergements\reisetopia.jpg" alt="Image de la chambre d'hôtel montrant un lit">
+                                <div class="card-content">
+                                    <div class="card-txt">
+                                        <h3 class="card-title">Hôtel Les mouettes</h3>
+                                        <p class="card-subtitle">Nuit à partir de 76<span class="euro">€</span></p>
+                                    </div>
+                                    <div class="card-rating">
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"style="color: #F2F2F2;"></i>
+                                        <span class="sr-only">Note de 4 sur 5</span>
+                                    </div>
+                                </div>
+                            </article>
+                        </div>  
                     </div>
-                    <div class="form">
-                    <div class="hebergements-cards">
-                        <article class="card">
-                            <img src="images\hebergements\fred-kleber.jpg" alt="Image de la chambre d'hôtel montrant un lit">
-                            <div class="card-content">
-                                <div class="card-txt">
-                                    <h3 class="card-title">Hôtel du port</h3>
-                                    <p class="card-subtitle">Nuit à partir de 52<span class="euro">€</span></p>
+                    <div class="form-2">
+                        <div class="hebergements-cards">
+                            <article class="card">
+                                <img src="images\hebergements\annie-spratt.jpg" alt="Image de la chambre d'hôtel montrant un lit">
+                                <div class="card-content">
+                                    <div class="card-txt">
+                                        <h3 class="card-title">Hôtel de la mer</h3>
+                                        <p class="card-subtitle">Nuit à partir de 46<span class="euro">€</span></p>
+                                    </div>
+                                    <div class="card-rating">
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"style="color: #F2F2F2;"></i>
+                                        <span class="sr-only">Note de 4 sur 5</span>
+                                    </div>
                                 </div>
-                                <div class="card-rating">
-                                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                    <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"style="color: #F2F2F2;"></i>
-                                    <span class="sr-only">Note de 4 sur 5</span>
+                            </article>
+                            <article class="card">
+                                <img src="images\hebergements\marcus-loke.jpg" alt="Image de la chambre d'hôtel montrant un lit">
+                                <div class="card-content">
+                                    <div class="card-txt">
+                                        <h3 class="card-title">Auberge La Canebière</h3>
+                                        <p class="card-subtitle">Nuit à partir de 25<span class="euro">€</span></p>
+                                    </div>
+                                    <div class="card-rating">
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"style="color: #F2F2F2;"></i>
+                                        <span class="sr-only">Note de 4 sur 5</span>
+                                    </div>
                                 </div>
-                            </div>
+                            </article>
+                            <article class="card">
+                                <a href="#"></a>
+                                <img src="images\hebergements\nicate-lee.jpg" alt="Image de la chambre d'hôtel montrant un lit">
+                                <div class="card-content">
+                                    <div class="card-txt">
+                                        <h3 class="card-title">Auberge Le Panier</h3>
+                                        <p class="card-subtitle">Nuit à partir de 23<span class="euro">€</span></p>
+                                    </div>
+                                    <div class="card-rating">
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"style="color: #F2F2F2;"></i>
+                                        <span class="sr-only">Note de 4 sur 5</span>
+                                    </div>
+                                </div>
+                            </article>
                         </div>
-                            <div class="hebergements-cards">
-                                <article class="card">
-                                    <img src="images\hebergements\febrian-zakaria.jpg" alt="Image de la chambre d'hôtel montrant un lit">
-                                    <div class="card-content">
-                                        <div class="card-txt">
-                                            <h3 class="card-title">Hôtel Chez Amina</h3>
-                                            <p class="card-subtitle">Nuit à partir de 96<span class="euro">€</span></p>
-                                        </div>
-                                        <div class="card-rating">
-                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                            <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"style="color: #F2F2F2;"></i>
-                                            <span class="sr-only">Note de 4 sur 5</span>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="hebergements-cards">
-                                    <article class="card">
-                                        <img src="images\hebergements\reisetopia.jpg" alt="Image de la chambre d'hôtel montrant un lit">
-                                        <div class="card-content">
-                                            <div class="card-txt">
-                                                <h3 class="card-title">Hôtel Les mouettes</h3>
-                                                <p class="card-subtitle">Nuit à partir de 76<span class="euro">€</span></p>
-                                            </div>
-                                            <div class="card-rating">
-                                                <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                                <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                                <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                                <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                                <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"style="color: #F2F2F2;"></i>
-                                                <span class="sr-only">Note de 4 sur 5</span>
-                                            </div>
-                                        </div>
-                                    </div>
-
-
-                                    <div class="hebergements-cards">
-                                        <article class="card">
-                                            <img src="images\hebergements\annie-spratt.jpg" alt="Image de la chambre d'hôtel montrant un lit">
-                                            <div class="card-content">
-                                                <div class="card-txt">
-                                                    <h3 class="card-title">Hôtel de la mer</h3>
-                                                    <p class="card-subtitle">Nuit à partir de 46<span class="euro">€</span></p>
-                                                </div>
-                                                <div class="card-rating">
-                                                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                                    <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"style="color: #F2F2F2;"></i>
-                                                    <span class="sr-only">Note de 4 sur 5</span>
-                                                </div>
-                                            </div>
-                                        </div>
-
-                                        <div class="hebergements-cards">
-                                            <article class="card">
-                                                <img src="images\hebergements\marcus-loke.jpg" alt="Image de la chambre d'hôtel montrant un lit">
-                                                <div class="card-content">
-                                                    <div class="card-txt">
-                                                        <h3 class="card-title">Auberge La Canebière</h3>
-                                                        <p class="card-subtitle">Nuit à partir de 25<span class="euro">€</span></p>
-                                                    </div>
-                                                    <div class="card-rating">
-                                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                                        <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"style="color: #F2F2F2;"></i>
-                                                        <span class="sr-only">Note de 4 sur 5</span>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="hebergements-cards">
-                                                <article class="card">
-                                                    <img src="images\hebergements\nicate-lee.jpg" alt="Image de la chambre d'hôtel montrant un lit">
-                                                    <div class="card-content">
-                                                        <div class="card-txt">
-                                                            <h3 class="card-title">Auberge Le Panier</h3>
-                                                            <p class="card-subtitle">Nuit à partir de 23<span class="euro">€</span></p>
-                                                        </div>
-                                                        <div class="card-rating">
-                                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                                            <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"style="color: #F2F2F2;"></i>
-                                                            <span class="sr-only">Note de 4 sur 5</span>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                                </div>
-                                                <br>
-                                                <div class="populaires-title">
-                                                    <h2 class="section-title">Afficher plus</h2>
-                                                </div>
-                                </section>
-                <section class="populaires">
+                    </div>  
+                </div> 
+                <div class="populaires-title">
+                    <h2 class="section-more-title" href="#">Afficher plus</h2>
+                </div>
+            </section>          
+            <section class="populaires">
                     <div class="populaires-title">
                         <h2 class="section-title">Les plus populaires</h2>
                         <i class="fa-solid fa-chart-line" aria-hidden="true"></i>
