--- a/index.html
+++ b/index.html
@@ -251,6 +251,31 @@
                     </div>
                 </section>
             </div>
+                <section class="activites">
+                    <div class="title">
+                        <h2>Activités à Marseille</h2>
+                    </div>
+                    <br>
+                    <div class="card-activites">
+                    <div class="card-body">
+                        <img src="images\activites\reno-laithienne.jpg" alt="photo vieux port">
+                        <h3>Vieux-Port</h3>
+                    </div>
+                    <div class="card-body">
+                        <img src="images\activites\paul-hermann.jpg" alt="photo Fort de Pomègues">
+                        <h3>Fort de Pomègues</h3>
+                    </div>
+                    <div class="card-body">
+                        <img src="images\activites\kilyan-sockalingum.jpg" alt="Parc national des Calanques">
+                        <h3>Parc national des Calanques</h3>
+                    </div>
+                    <div class="card-body">
+                        <img src="images\activites\florian-wehde.jpg" alt="Notre-Dame-de-la-Garde">
+                        <h3>Notre-Dame-de-la-Garde</h3>
+                    </div>
+                    </div>
+                    <br>
+                </section>
         </main>
         <footer></footer>
     </div>
