--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     </div>
                     <div class="right">
                          <a href="#hebergements" class="current">Hébergements</a>
-                         <a href="images/activites">Activités</a>
+                         <a href="#activites">Activités</a>
                     </div> 
                  </nav>
             <header>
@@ -251,11 +251,10 @@
                     </div>
                 </section>
             </div>
-                <section class="activites">
+                <section class="activites" id="activites">
                     <div class="title">
                         <h2>Activités à Marseille</h2>
                     </div>
-                    <br>
                     <div class="card-activites">
                     <div class="card-body">
                         <img src="images\activites\reno-laithienne.jpg" alt="photo vieux port">
@@ -274,7 +273,6 @@
                         <h3>Notre-Dame-de-la-Garde</h3>
                     </div>
                     </div>
-                    <br>
                 </section>
         </main>
         <footer></footer>
