--- a/index.html
+++ b/index.html
@@ -275,7 +275,32 @@
                     </div>
                 </section>
         </main>
-        <footer></footer>
+        <footer>
+            <div class="footer">
+                <div class="gauche">
+                    <ul>
+                        <li><h3>A propos</h3></li>
+                        <li>Fonctionnement du site</li>
+                        <li>Conditions générales</li>
+                        <li>Données et confidentialité</li>
+                    </ul>
+                </div>
+                <div class="milieu">
+                    <ul>
+                        <li><h3>Nos hébergements</h3></li>
+                        <li>Charte qualité</li>
+                        <li>Proposer votre hôtel</li>
+                    </ul>
+                </div>
+                <div class="droite"> 
+                    <ul>
+                        <li><h3>Assistance</h3></li>
+                        <li>Centre d'aide</li>
+                        <li>Nous contacter</li>
+                    </ul>
+                </div>
+            </div>
+        </footer>
     </div>
 </body>
 </html>
