--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                          <a href="#hebergements" class="current">Hébergements</a>
                          <a href="#activites">Activités</a>
                     </div> 
-                 </nav>               
+                 </nav>              
             <header>
                 <div class="main-container">
                  <article class="title">
@@ -78,7 +78,7 @@
                     <div class="form-1">
                         <div class="hebergements-cards">
                             <article class="card">
-                                <img src="images\hebergements\fred-kleber.jpg" alt="Image de la chambre d'hôtel montrant un lit">
+                                <img src="images/hebergements/fred-kleber.jpg" alt="Image de la chambre d'hôtel montrant un lit">
                                 <div class="card-content">
                                     <div class="card-txt">
                                         <h3 class="card-title">Hôtel du port</h3>
@@ -89,13 +89,13 @@
                                         <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
                                         <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
                                         <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"style="color: #F2F2F2;"></i>
+                                        <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
                                         <span class="sr-only">Note de 4 sur 5</span>
                                     </div>
                                 </div>
                             </article>
                             <article class="card">
-                                <img src="images\hebergements\febrian-zakaria.jpg" alt="Image de la chambre d'hôtel montrant un lit">
+                                <img src="images/hebergements/febrian-zakaria.jpg" alt="Image de la chambre d'hôtel montrant un lit">
                                 <div class="card-content">
                                     <div class="card-txt">
                                         <h3 class="card-title">Hôtel Chez Amina</h3>
@@ -106,13 +106,13 @@
                                         <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
                                         <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
                                         <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"style="color: #F2F2F2;"></i>
+                                        <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
                                         <span class="sr-only">Note de 4 sur 5</span>
                                     </div>
                                 </div>
                             </article>
                             <article class="card">
-                                <img src="images\hebergements\reisetopia.jpg" alt="Image de la chambre d'hôtel montrant un lit">
+                                <img src="images/hebergements/reisetopia.jpg" alt="Image de la chambre d'hôtel montrant un lit">
                                 <div class="card-content">
                                     <div class="card-txt">
                                         <h3 class="card-title">Hôtel Les mouettes</h3>
@@ -123,7 +123,7 @@
                                         <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
                                         <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
                                         <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"style="color: #F2F2F2;"></i>
+                                        <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
                                         <span class="sr-only">Note de 4 sur 5</span>
                                     </div>
                                 </div>
@@ -133,7 +133,7 @@
                     <div class="form-2">
                         <div class="hebergements-cards">
                             <article class="card">
-                                <img src="images\hebergements\annie-spratt.jpg" alt="Image de la chambre d'hôtel montrant un lit">
+                                <img src="images/hebergements/annie-spratt.jpg" alt="Image de la chambre d'hôtel montrant un lit">
                                 <div class="card-content">
                                     <div class="card-txt">
                                         <h3 class="card-title">Hôtel de la mer</h3>
@@ -144,13 +144,13 @@
                                         <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
                                         <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
                                         <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"style="color: #F2F2F2;"></i>
+                                        <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
                                         <span class="sr-only">Note de 4 sur 5</span>
                                     </div>
                                 </div>
                             </article>
                             <article class="card">
-                                <img src="images\hebergements\marcus-loke.jpg" alt="Image de la chambre d'hôtel montrant un lit">
+                                <img src="images/hebergements/marcus-loke.jpg" alt="Image de la chambre d'hôtel montrant un lit">
                                 <div class="card-content">
                                     <div class="card-txt">
                                         <h3 class="card-title">Auberge La Canebière</h3>
@@ -161,14 +161,14 @@
                                         <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
                                         <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
                                         <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"style="color: #F2F2F2;"></i>
+                                        <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
                                         <span class="sr-only">Note de 4 sur 5</span>
                                     </div>
                                 </div>
                             </article>
                             <article class="card">
                                 <a href="#"></a>
-                                <img src="images\hebergements\nicate-lee.jpg" alt="Image de la chambre d'hôtel montrant un lit">
+                                <img src="images/hebergements/nicate-lee.jpg" alt="Image de la chambre d'hôtel montrant un lit">
                                 <div class="card-content">
                                     <div class="card-txt">
                                         <h3 class="card-title">Auberge Le Panier</h3>
@@ -179,7 +179,7 @@
                                         <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
                                         <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
                                         <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"style="color: #F2F2F2;"></i>
+                                        <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
                                         <span class="sr-only">Note de 4 sur 5</span>
                                     </div>
                                 </div>
@@ -188,7 +188,8 @@
                     </div>  
                 </div> 
                 <div class="populaires-title">
-                    <h2 class="section-more-title" href="#">Afficher plus</h2>
+                    <h2 class="section-more-title">Afficher plus</h2>
+                    <a href="#"></a>
                 </div>
             </section>          
             <section class="populaires">
@@ -257,19 +258,19 @@
                     </div>
                     <div class="card-activites">
                     <div class="card-body">
-                        <img src="images\activites\reno-laithienne.jpg" alt="photo vieux port">
+                        <img src="images/activites/reno-laithienne.jpg" alt="photo vieux port">
                         <h3>Vieux-Port</h3>
                     </div>
                     <div class="card-body">
-                        <img src="images\activites\paul-hermann.jpg" alt="photo Fort de Pomègues">
+                        <img src="images/activites/paul-hermann.jpg" alt="photo Fort de Pomègues">
                         <h3>Fort de Pomègues</h3>
                     </div>
                     <div class="card-body">
-                        <img src="images\activites\kilyan-sockalingum.jpg" alt="Parc national des Calanques">
+                        <img src="images/activites/kilyan-sockalingum.jpg" alt="Parc national des Calanques">
                         <h3>Parc national des Calanques</h3>
                     </div>
                     <div class="card-body">
-                        <img src="images\activites\florian-wehde.jpg" alt="Notre-Dame-de-la-Garde">
+                        <img src="images/activites/florian-wehde.jpg" alt="Notre-Dame-de-la-Garde">
                         <h3>Notre-Dame-de-la-Garde</h3>
                     </div>
                     </div>
@@ -300,7 +301,6 @@
                     </ul>
                 </div>
             </div>
-        </div>
         </footer>
     </div>
 </body>
