update for rewiew

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
                     <div class="form-1">
                         <div class="hebergements-cards">
                             <article class="card">
+                              <a href="#">
                                 <img src="images/hebergements/fred-kleber.jpg" alt="Image de la chambre d'hôtel montrant un lit">
                                 <div class="card-content">
                                     <div class="card-txt">
@@ -93,8 +94,10 @@
                                         <span class="sr-only">Note de 4 sur 5</span>
                                     </div>
                                 </div>
+                              </a>
                             </article>
                             <article class="card">
+                              <a href="#">    
                                 <img src="images/hebergements/febrian-zakaria.jpg" alt="Image de la chambre d'hôtel montrant un lit">
                                 <div class="card-content">
                                     <div class="card-txt">
@@ -110,8 +113,10 @@
                                         <span class="sr-only">Note de 4 sur 5</span>
                                     </div>
                                 </div>
+                              </a>
                             </article>
                             <article class="card">
+                              <a href="#">
                                 <img src="images/hebergements/reisetopia.jpg" alt="Image de la chambre d'hôtel montrant un lit">
                                 <div class="card-content">
                                     <div class="card-txt">
@@ -127,12 +132,14 @@
                                         <span class="sr-only">Note de 4 sur 5</span>
                                     </div>
                                 </div>
+                              </a>
                             </article>
                         </div>  
                     </div>
                     <div class="form-2">
                         <div class="hebergements-cards">
                             <article class="card">
+                              <a href="#">
                                 <img src="images/hebergements/annie-spratt.jpg" alt="Image de la chambre d'hôtel montrant un lit">
                                 <div class="card-content">
                                     <div class="card-txt">
@@ -148,8 +155,10 @@
                                         <span class="sr-only">Note de 4 sur 5</span>
                                     </div>
                                 </div>
+                              </a>
                             </article>
                             <article class="card">
+                              <a href="#">
                                 <img src="images/hebergements/marcus-loke.jpg" alt="Image de la chambre d'hôtel montrant un lit">
                                 <div class="card-content">
                                     <div class="card-txt">
@@ -165,9 +174,10 @@
                                         <span class="sr-only">Note de 4 sur 5</span>
                                     </div>
                                 </div>
+                              </a>
                             </article>
                             <article class="card">
-                                <a href="#"></a>
+                              <a href="#">
                                 <img src="images/hebergements/nicate-lee.jpg" alt="Image de la chambre d'hôtel montrant un lit">
                                 <div class="card-content">
                                     <div class="card-txt">
@@ -183,13 +193,15 @@
                                         <span class="sr-only">Note de 4 sur 5</span>
                                     </div>
                                 </div>
+                              </a>
                             </article>
                         </div>
                     </div>  
                 </div> 
                 <div class="populaires-title">
+                    <a href="#">
                     <h2 class="section-more-title">Afficher plus</h2>
-                    <a href="#"></a>
+                    </a>
                 </div>
             </section>          
             <section class="populaires">
@@ -199,6 +211,7 @@
                     </div>
                     <div class="populaires-cards">
                         <article class="card">
+                          <a href="#">
                             <img src="./images/hebergements/emile-guillemot.jpg" alt="Image de la chambre d'hôtel montrant un lit">
                             <div class="card-content">
                                 <div class="card-txt">
@@ -214,8 +227,10 @@
                                     <span class="sr-only">Note de 4 sur 5</span>
                                 </div>
                             </div>
+                          </a>
                         </article>
                         <article class="card">
+                          <a href="#">
                             <img src="./images/hebergements/aw-creative.jpg" alt="Image de la chambre d'hôtel montrant un lit">
                             <div class="card-content">
                                 <div class="card-txt">
@@ -231,8 +246,10 @@
                                     <span class="sr-only">Note de 4 sur 5</span>
                                 </div>
                             </div>
-                        </article>
+                          </a>   
+                        </article> 
                         <article class="card">
+                          <a href="#">
                             <img src="./images/hebergements/febrian-zakaria2.jpg" alt="Image de la chambre d'hôtel montrant un lit">
                             <div class="card-content">
                                 <div class="card-txt">
@@ -248,6 +265,7 @@
                                     <span class="sr-only">Note de 4 sur 5</span>
                                 </div>
                             </div>
+                          </a>
                         </article>
                     </div>
                 </section>
@@ -258,50 +276,58 @@
                     </div>
                     <div class="card-activites">
                     <div class="card-body">
+                      <a href="#">
                         <img src="images/activites/reno-laithienne.jpg" alt="photo vieux port">
                         <h3>Vieux-Port</h3>
+                      </a>
                     </div>
                     <div class="card-body">
+                      <a href="#">
                         <img src="images/activites/paul-hermann.jpg" alt="photo Fort de Pomègues">
                         <h3>Fort de Pomègues</h3>
+                      </a>
                     </div>
                     <div class="card-body">
+                      <a href="#">
                         <img src="images/activites/kilyan-sockalingum.jpg" alt="Parc national des Calanques">
                         <h3>Parc national des Calanques</h3>
+                      </a>
                     </div>
                     <div class="card-body">
+                      <a href="#">
                         <img src="images/activites/florian-wehde.jpg" alt="Notre-Dame-de-la-Garde">
                         <h3>Notre-Dame-de-la-Garde</h3>
+                      </a>
                     </div>
                     </div>
                 </section>
-        </main>
-        <footer>
-            <div class="footer">
-                <div class="left-menu">
-                    <h3>A propos</h3>
-                    <ul>
-                        <li>Fonctionnement du site</li>
-                        <li>Conditions générales</li>
-                        <li>Données et confidentialité</li>
-                    </ul>
-                </div>
-                <div class="center-menu">
-                    <h3>Nos hébergements</h3>
-                    <ul>
-                        <li>Charte qualité</li>
-                        <li>Proposer votre hôtel</li>
-                    </ul>
-                </div>
-                <div class="right-menu"> 
-                    <h3>Assistance</h3>
-                    <ul>
-                        <li>Centre d'aide</li>
-                        <li>Nous contacter</li>
-                    </ul>
-                </div>
+                </main>
+                <footer>
+                    <div class="footer">
+                        <div class="left-menu">
+                            <h3>A propos</h3>
+                            <ul>
+                                <li>Fonctionnement du site</li>
+                                <li>Conditions générales</li>
+                                <li>Données et confidentialité</li>
+                            </ul>
+                        </div>
+                        <div class="center-menu">
+                            <h3>Nos hébergements</h3>
+                            <ul>
+                                <li>Charte qualité</li>
+                                <li>Proposer votre hôtel</li>
+                            </ul>
+                        </div>
+                        <div class="right-menu"> 
+                            <h3>Assistance</h3>
+                            <ul>
+                                <li>Centre d'aide</li>
+                                <li>Nous contacter</li>
+                            </ul>
+                        </div>
+                    </div>
+                </footer>
             </div>
-        </footer>
-    </div>
-</body>
-</html>
+        </body>
+        </html>
